--- a/ColorPicker/src/css/style.css
+++ b/ColorPicker/src/css/style.css
@@ -1,6 +1,6 @@
 body{
     margin: 0;
-
+    background-color: black;
     display: flex;
 }
 .first{
@@ -23,8 +23,14 @@ button{
 
     border: 0;
 
+    transition: 150ms ease;
+
     height: 100vh;
     width: 12vw;
+}
+button:active{
+    scale: 0.98;
+    border-radius: 5px;
 }
 #help {
     display: flex;
@@ -41,7 +47,7 @@ button{
     background-color: mediumseagreen;
 }
 #red {
- background-color: #f44336;
+    background-color: #f44336;
 }
 #red:hover {
     background-color: #e53935;
